# vasya_wakeword

./: .gitignore  LICENSE  README.md  example.py  prepare.py  pyproject.toml  requirements.txt  train.py  tts_gen.py  vasya.onnx
tools/: dl_dataset.py  hash_rename.py
